--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
        0.3 Basic Scene 
     </h1>
 
-    <script src="/script.js">
-        
-    </script>
+    <script src="/script.js"></script>
+    <script src="/three.min.js"></script>
 </body>
 </html>
