--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 
     <script src="/script.js"></script>
     <script src="/three.min.js"></script>
+    <script src="/gsap.js"></script>
 </body>
 </html>
