--- a/css/index.html
+++ b/css/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1>Make me purple</h1>
     <style>
-        h1{color: green }
+        h1{color: purple }
     </style>
 
-    <h2 style="color: purple;">Make me green</h2>
+    <h2 style="color: green;">Make me green</h2>
 
     <h3> Make me orange</h3>
 </body>
